--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "firebase": "^9.11.0",
+    "firebase-tools": "^11.14.1",
     "sass": "^1.55.0"
   }
 }
