Deploy: 1.0.0 is launch

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "deploy": "npx gh-pages -d dist"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
@@ -22,6 +23,7 @@
   "dependencies": {
     "firebase": "^9.11.0",
     "firebase-tools": "^11.14.1",
+    "gh-pages": "^4.0.0",
     "sass": "^1.55.0"
   }
 }
